--- a/packages/frontend/styles/base/embedded.css
+++ b/packages/frontend/styles/base/embedded.css
@@ -20,7 +20,11 @@ object {
 }
 
 @media (prefers-color-scheme: dark) {
-  img {
+  :not([data-color-scheme]) img {
     filter: brightness(0.8) contrast(1.2);
   }
+}
+
+[data-color-scheme="dark"] img {
+  filter: brightness(0.8) contrast(1.2);
 }
